// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services queries fetches the agent status 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
      "metric",
      "transaction",
    ],
  },
  "body": Object {
    "size": 0,
  },
  "terminateAfter": 1,
}
`;

exports[`services queries fetches the legacy data status 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "observer.version_major": Object {
                "lt": 7,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "terminateAfter": 1,
}
`;

exports[`services queries fetches the service agent name 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "error",
      "transaction",
      "metric",
    ],
  },
  "body": Object {
    "aggs": Object {
      "agents": Object {
        "terms": Object {
          "field": "agent.name",
          "size": 1,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "terminateAfter": 1,
}
`;

exports[`services queries fetches the service items 1`] = `
Array [
  Object {
    "apm": Object {
      "events": Array [
        "transaction",
      ],
    },
    "body": Object {
      "aggs": Object {
        "services": Object {
          "aggs": Object {
            "transactionType": Object {
              "aggs": Object {
                "avg_duration": Object {
                  "avg": Object {
                    "field": "transaction.duration.us",
                  },
                },
                "environments": Object {
                  "terms": Object {
                    "field": "service.environment",
                    "missing": "",
                  },
                },
                "outcomes": Object {
                  "terms": Object {
                    "field": "event.outcome",
                    "include": Array [
                      "failure",
                      "success",
                    ],
                  },
                },
                "sample": Object {
                  "top_metrics": Object {
                    "metrics": Object {
                      "field": "agent.name",
                    },
                    "sort": Object {
                      "@timestamp": "desc",
                    },
                  },
                },
                "timeseries": Object {
                  "aggs": Object {
                    "avg_duration": Object {
                      "avg": Object {
                        "field": "transaction.duration.us",
                      },
                    },
                    "outcomes": Object {
                      "terms": Object {
                        "field": "event.outcome",
                        "include": Array [
                          "failure",
                          "success",
                        ],
                      },
                    },
                  },
                  "date_histogram": Object {
                    "extended_bounds": Object {
                      "max": 1528977600000,
                      "min": 1528113600000,
                    },
                    "field": "@timestamp",
                    "fixed_interval": "43200s",
                    "min_doc_count": 0,
                  },
                },
              },
              "terms": Object {
                "field": "transaction.type",
              },
            },
          },
          "terms": Object {
            "field": "service.name",
            "size": 500,
          },
        },
      },
      "query": Object {
        "bool": Object {
          "filter": Array [
            Object {
              "range": Object {
                "@timestamp": Object {
                  "format": "epoch_millis",
                  "gte": 1528113600000,
                  "lte": 1528977600000,
                },
              },
            },
            Object {
              "term": Object {
                "service.environment": "test",
              },
            },
          ],
        },
      },
      "size": 0,
    },
  },
]
`;

exports[`services queries fetches the service transaction types 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "types": Object {
        "terms": Object {
          "field": "transaction.type",
          "size": 100,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
}
`;
